[package]
name = "ghtm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
aes-gcm = "0.10.3"
rand = "0.9.2"
rpassword = "7.4.0"
directories = "6.0.0"
base64 = "0.22.1"
git2 = "0.20.2"
chrono = { version = "0.4.41", features = ["serde"] }
sha2 = "0.10.9"
